# libsodium-fpc

./: .gitignore  CMakeLists.txt  NaClTest.pas  Readme.md  libSodium.pas  yProcs.pas
